# PyFailsafeDemo

./: .gitignore  README.md
bffApi/: .gitignore  README.md  manage.py  pyproject.toml
bffApi/bffApi/: asgi.py  settings.py  urls.py  wsgi.py
bffApi/shipping_api/: views.py
bffApi/todo_api/: views.py
clientApp/: nx.json  package-lock.json  package.json
clientApp/apps/nx-angular-app/: .eslintrc.json  project.json
clientApp/apps/nx-angular-app-e2e/: project.json
clientApp/apps/nx-angular-app/src/: index.html
clientApp/apps/nx-angular-app/src/app/: Todo.ts  app.component.html  app.component.ts  app.module.ts
facadeApi/: README.md  main.py  manage.py  pyproject.toml
facadeApi/facadeApi/: asgi.py  settings.py  urls.py  wsgi.py
facadeApi/routers/: facade_todo.py
facadeApi/shipping_api/: views.py
facadeApi/todo_api/: views.py
resilience-devlin/: README.md  angular.json  package-lock.json  package.json
resilience-devlin/apps/nx-angular-app/: .eslintrc.json  jest.config.js
resilience-devlin/apps/nx-angular-app-e2e/: cypress.json
resilience-devlin/apps/nx-angular-app-e2e/src/integration/: app.spec.ts
resilience-devlin/apps/nx-angular-app/src/: index.html
resilience-devlin/apps/nx-angular-app/src/app/: app.component.html  app.component.spec.ts  app.component.ts
todoApi/: README.md  logging.conf  main.py  pyproject.toml
todoApi/routers/: todo.py
